--- a/vroom/pom.xml
+++ b/vroom/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.2</version>
         </dependency>
         <!-- /shaded dependencies -->
     </dependencies>
@@ -57,6 +57,8 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <shadedArtifactAttached>false</shadedArtifactAttached>
+                            <createDependencyReducedPom>true</createDependencyReducedPom>
                             <minimizeJar>true</minimizeJar>
                             <createSourcesJar>true</createSourcesJar>
                             <relocations>
